Fix message content alignment

--- a/src/components/Atoms/Message/Message.scss
+++ b/src/components/Atoms/Message/Message.scss
@@ -6,6 +6,7 @@
 		p {
 			background: #e5e5ea;
 			color: black;
+			text-align: left;
 		}
 	}
 
@@ -16,6 +17,7 @@
 			color: white;
 			background: #0b93f6;
 			align-self: flex-end;
+			text-align: right;
 		}
 	}
 
